Specify, first round
