# src/main/java/generated/com/panopticode/openapi/api/MetadataApi.java
@@ -1,0 +1,82 @@
+/*
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.18.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.panopticode.openapi.api;
+
+import com.panopticode.openapi.model.CreateMetadataRequest;
+import com.panopticode.openapi.model.ErrorModel;
+import com.panopticode.openapi.model.Metadata;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-12-31T15:08:48.518121375Z[Europe/London]", comments = "Generator version: 7.18.0")
+@Validated
+@Tag(name = "metadata", description = "the metadata API")
+public interface MetadataApi {
+
+    default MetadataApiDelegate getDelegate() {
+        return new MetadataApiDelegate() {};
+    }
+
+    String PATH_CREATE_METADATA = "/nodes";
+    /**
+     * POST /nodes : Create new metadata record
+     * Create new metadata record
+     *
+     * @param createMetadataRequest Data object to save a new recipe (required)
+     * @return successful operation (status code 201)
+     *         or Invalid input (status code 405)
+     *         or Unexpected error (status code 200)
+     */
+    @Operation(
+        operationId = "createMetadata",
+        summary = "Create new metadata record",
+        description = "Create new metadata record",
+        tags = { "metadata" },
+        responses = {
+            @ApiResponse(responseCode = "201", description = "successful operation", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Metadata.class))
+            }),
+            @ApiResponse(responseCode = "405", description = "Invalid input", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorModel.class))
+            }),
+            @ApiResponse(responseCode = "default", description = "Unexpected error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = MetadataApi.PATH_CREATE_METADATA,
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    default ResponseEntity<Metadata> createMetadata(
+        @Parameter(name = "CreateMetadataRequest", description = "Data object to save a new recipe", required = true) @Valid @RequestBody CreateMetadataRequest createMetadataRequest
+    ) {
+        return getDelegate().createMetadata(createMetadataRequest);
+    }
+
+}
